--- a/Start/index.html
+++ b/Start/index.html
@@ -16,6 +16,7 @@
         <h1 class="header__title">
           The Brighton Times
         </h1>
+        <div class="menu-icon-bar" id="menu">☰</div>
       </div>
     </header>
 
@@ -178,5 +179,15 @@
         </ul>
       </footer>
     </main>
+    <script>
+      let menu = document.querySelector('#menu');
+      let drawer = document.querySelector('#drawer');
+      let main = document.querySelector('main')
+      menu.addEventListener('click', function(e){
+        console.log('I have been clicked!');
+        drawer.classList.toggle('open');
+        e.stopPropagation();
+      });
+    </script>
   </body>
 </html>
